k8s/infra/auth/pocket-id/pi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: auth
spec:
  type: ClusterIP
  selector:
    app: pocket-id
  ports:
    - name: web
      port: 80
      targetPort: http
